Change map to small viewport height to avoid overlap on mobiles

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
    }
 
    #map {
-       height: calc(100vh - 56px - 73px - 56px); /* entire height minus top navbar minus hero minus bottom navbar */
+       height: calc(100svh - 56px - 73px - 56px); /* entire height minus top navbar minus hero minus bottom navbar */
        width: 100vw;
        z-index: 10;
    }
